manifests/manifests/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: paymentsapi
  labels:
    app: paymentsapi
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: paymentsapi}
spec:
  kind: 
  ports:
    - name: http-8585
      port: 8585
      protocol: TCP
      targetPort: 8585
  selector:
    app: paymentsapi
