manifests/manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paymentsapi
  namespace: paymentsapi
  labels:
    app: paymentsapi
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: paymentsapi
spec:
  - host: paymentsapi.localhost
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: paymentsapi
              port:
                number: 8086
